feat: update documents (#85)
* feat: update documents

* feat: update documents

--- a/src/locales/ru/tasks.json
+++ b/src/locales/ru/tasks.json
@@ -114,7 +114,7 @@
             "chooseActionPlaceholder": "Выберите",
             "applyAction": "Выполнить",
             "actions": {
-                "updateStatusDocuments": "Обновить статус документа"
+                "updateDocument": "Редактировать документ"
             }
         },
         "Documents": {
