--- a/src/locales/ru/tasks.json
+++ b/src/locales/ru/tasks.json
@@ -114,7 +114,8 @@
             "chooseActionPlaceholder": "Выберите",
             "applyAction": "Выполнить",
             "actions": {
-                "updateDocument": "Редактировать документ"
+                "updateDocument": "Редактировать документ",
+                "uploadDocument": "Загрузить документ"
             }
         },
         "Documents": {
