--- a/src/locales/ru/products.json
+++ b/src/locales/ru/products.json
@@ -198,6 +198,10 @@
             "blockCommentLabel": "Комментарий",
             "closeModalButton": "Отменить",
             "submitButton": "Добавить"
+        },
+        "addDocumentModalWindow": {
+            "closeModalButton": "Отменить",
+            "submitButton": "Добавить"
         }
     },
     "WithoutModels": {
