feature/QCMS-204-ver4.0

--- a/src/locales/ru/providers.json
+++ b/src/locales/ru/providers.json
@@ -30,7 +30,7 @@
             "SupplierStatus": "Статус поставщика",
             "VendorLevelMonitoring": "Уровень поставщика для мониторинга",
             "NonConformity": "Non conformity",
-            "NrustKiller": "Nrust killer",
+            "TrustKiller": "Trust killer",
             "FailureRateInspections": "Частота отказов предотгрузочных инспекций",
             "Status": "Статус",
             "BillingCountry": "Страна выставления счетов",
