QCMS-147 fix styles

--- a/src/locales/ru/models.json
+++ b/src/locales/ru/models.json
@@ -76,13 +76,13 @@
                     "Title": "Статус поставщика: Импортер"
                 },
                 "DISTRIBUTOR": {
-                    "Title": "Статус поставщика: Дистрибьютер"
+                    "Title": "Статус поставщика: Дистрибьютор"
                 }
             },
             "Table": {
                 "Options": {
                     "Person": {
-                        "DISTRIBUTOR": "Дистрибьютер",
+                        "DISTRIBUTOR": "Дистрибьютор",
                         "IMPORTER": "Импортер",
                         "MANUFACTURER": "Производитель"
                     },
