--- a/src/locales/ru/tasks.json
+++ b/src/locales/ru/tasks.json
@@ -123,7 +123,7 @@
             "AwaitedDocuments": {
                 "Title": "Ожидаемые документы",
                 "Field": {
-                    "documentName": "Название разрешительного документа",
+                    "documentName": "Наименование",
                     "documentType": "Тип документа",
                     "template": "Шаблон",
                     "comment": "Комментарий"
@@ -135,7 +135,7 @@
                     "documentType": "Тип документа",
                     "documentMask": "Маска документа",
                     "status": "Статус",
-                    "documentName": "Имя документа",
+                    "documentName": "Имя файла",
                     "partial": "Партийный",
                     "uploadDate": "Дата загрузки",
                     "startDate": "Дата начала действия",
