Метод удаления задач работает. Начинаем рефакторниг и удаление бардака

--- a/src/locales/ru/models.json
+++ b/src/locales/ru/models.json
@@ -4,7 +4,7 @@
         "Add": "Добавить",
         "Apply": "Применить",
         "Edit": "Редактировать",
-        "Delete": "Удалить",
+        "Delete": "Удалить задачу",
         "Search": "Поиск",
         "Save": "Сохранить",
         "Clear": "Очистить",
