feature/QCMS-345 Работа с мастер планом удаление задач

--- a/src/locales/ru/models.json
+++ b/src/locales/ru/models.json
@@ -4,13 +4,14 @@
         "Add": "Добавить",
         "Apply": "Применить",
         "Edit": "Редактировать",
-        "Delete": "Удалить",
+        "Delete": "Удалить задачу",
         "Search": "Поиск",
         "Save": "Сохранить",
         "Clear": "Очистить",
         "More": "Больше",
         "Less": "Меньше",
-        "AddModel": "Добавить модель"
+        "AddModel": "Добавить модель",
+        "Error": "Ошибка"
     },
     "Common": {
         "Yes": "Да",
