Feature/qcms 344 design (#146)
* update: show more component

* update: responsible and approver columns new design

* update: doc column design

* update: add translation for showComponents

* fix: key prop

---------

Co-authored-by: nikita gavrilov <nikita.gavrilov@nordclan.com>

--- a/src/locales/ru/models.json
+++ b/src/locales/ru/models.json
@@ -106,7 +106,8 @@
                     "approvingPerson": "Утверждающее лицо",
                     "documentTemplate": "Шаблон документа",
                     "taskRequirement": "Обязательность задачи"
-                }
+                },
+                "ShowMore": "Показать больше"
             }
         },
         "RiskMap": {
