QCMS-422 add locale selector

--- a/src/locales/en/providers.json
+++ b/src/locales/en/providers.json
@@ -30,7 +30,7 @@
             "SupplierStatus": "Supplier status",
             "VendorLevelMonitoring": "Supplier level for monitoring",
             "NonConformity": "Non conformity",
-            "NrustKiller": "Trust killer",
+            "TrustKiller": "Trust killer",
             "FailureRateInspections": "PDI failure rate",
             "Status": "Status",
             "BillingCountry": "Invoicing country",
@@ -79,6 +79,9 @@
             "filter": "Filter",
             "dates": "Dates",
             "providerName": "Supplier name",
+            "providerCode": "Supplier code",
+            "INN": "INN",
+            "businessLicenseNumber": "Business license number",
             "platform": "Platform responsible for self-assessment",
             "qualityAssessment": "Quality self-assessment",
             "databasePotentialSuppliers": "Potential supplier database",
