QCMS-350 update master plan

--- a/src/locales/ru/models.json
+++ b/src/locales/ru/models.json
@@ -92,6 +92,10 @@
                         "QE": "QE",
                         "SQM": "SQM",
                         "SERVICE_PROVIDER": "Подрядчик"
+                    },
+                    "Process": {
+                        "AUTO": "Автоматический",
+                        "MANUAL": "Ручной"
                     }
                 },
                 "Columns": {
